# zmq-interface

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  mac.yml  windows.yml
Example/: CMakeLists.txt  ReadMe.md  ZMQReader.cpp  ZMQReader.h  ZMQRegister.cpp  ZMQRegister.h  main.cpp  requirement.txt
Resources/python_client/: plot_process_zmq.py  run_simple_plotter.py  simple_plotter_zmq.py  test_app.py
Source/: OpenEphysLib.cpp  ZmqInterface.cpp  ZmqInterface.h  ZmqInterfaceEditor.cpp  ZmqInterfaceEditor.h
